<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings_scroll_view"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView_max_distance"
            android:layout_width="@dimen/settings_col_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_padding"
            android:text="@string/max_distance_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

        <EditText
            android:id="@+id/editText_max_distance"
            android:layout_width="@dimen/settings_col_width"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/textView_max_distance"
            android:layout_toEndOf="@id/textView_max_distance"
            android:inputType="number"
            android:backgroundTint="@color/colorAccent"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:autofillHints="10" />

        <View
            android:id="@+id/divider_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/editText_max_distance"
            android:background="@color/colorPrimaryDark"
            android:layout_marginVertical="@dimen/divider_spacing"
            android:layout_marginHorizontal="@dimen/text_padding"/>

        <TextView
            android:id="@+id/textView_gender"
            android:layout_width="@dimen/settings_col_width"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider_1"
            android:text="@string/your_gender_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

        <Spinner
            android:id="@+id/spinner_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/textView_gender"
            android:layout_toEndOf="@id/textView_gender"
            android:backgroundTint="@color/colorAccent"
            />

        <View
            android:id="@+id/divider_2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/spinner_gender"
            android:background="@color/colorPrimaryDark"
            android:layout_marginVertical="@dimen/divider_spacing"
            android:layout_marginHorizontal="@dimen/text_padding"/>

        <TextView
            android:id="@+id/textView_looking_for_gender"
            android:layout_width="@dimen/settings_col_width"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider_2"
            android:text="@string/looking_for_gender_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

        <Spinner
            android:id="@+id/spinner_looking_for_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/textView_looking_for_gender"
            android:layout_toEndOf="@id/textView_looking_for_gender"
            android:backgroundTint="@color/colorAccent"
            />

        <View
            android:id="@+id/divider_3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/spinner_looking_for_gender"
            android:background="@color/colorPrimaryDark"
            android:layout_marginVertical="@dimen/divider_spacing"
            android:layout_marginHorizontal="@dimen/text_padding"/>

        <TextView
            android:id="@+id/textView_account_privacy"
            android:layout_width="@dimen/settings_col_width"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider_3"
            android:text="@string/account_privacy_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

        <Spinner
            android:id="@+id/spinner_account_privacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/textView_account_privacy"
            android:layout_toEndOf="@id/textView_account_privacy"
            android:backgroundTint="@color/colorAccent"
            />

        <View
            android:id="@+id/divider_4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/spinner_account_privacy"
            android:background="@color/colorPrimaryDark"
            android:layout_marginVertical="@dimen/divider_spacing"
            android:layout_marginHorizontal="@dimen/text_padding"/>

        <TextView
            android:id="@+id/textView_age_range"
            android:layout_width="@dimen/settings_col_width"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider_4"
            android:text="@string/looking_for_ages_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

        <EditText
            android:id="@+id/editText_min_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/textView_age_range"
            android:layout_toEndOf="@id/textView_age_range"
            android:inputType="number"
            android:hint="18"
            android:backgroundTint="@color/colorAccent"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:autofillHints="18" />

        <TextView
            android:id="@+id/textView_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_padding"
            android:layout_alignBottom="@id/editText_min_age"
            android:layout_toEndOf="@id/editText_min_age"
            android:text="@string/to"
            android:layout_marginHorizontal="@dimen/text_padding"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

        <EditText
            android:id="@+id/editText_max_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/textView_to"
            android:layout_toEndOf="@id/textView_to"
            android:inputType="number"
            android:hint="99"
            android:backgroundTint="@color/colorAccent"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:autofillHints="99" />

        <View
            android:id="@+id/divider_5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/editText_max_age"
            android:background="@color/colorPrimaryDark"
            android:layout_marginVertical="@dimen/divider_spacing"
            android:layout_marginHorizontal="@dimen/text_padding"/>

        <TextView
            android:id="@+id/textView_reminder_time"
            android:layout_width="@dimen/settings_col_width"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/reminder_time_picker"
            android:text="@string/match_reminder_time_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            />

        <TimePicker
            android:id="@+id/reminder_time_picker"
            android:layout_width="@dimen/settings_col_width"
            android:layout_height="wrap_content"
            android:numbersBackgroundColor="@color/colorAccent"
            android:adjustViewBounds="true"
            android:timePickerMode="spinner"
            android:layout_below="@id/divider_5"
            android:layout_toEndOf="@id/textView_reminder_time"
            android:layout_marginHorizontal="@dimen/text_padding"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>

        <View
            android:id="@+id/divider_6"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/reminder_time_picker"
            android:background="@color/colorPrimaryDark"
            android:layout_marginTop="@dimen/divider_spacing"
            android:layout_marginHorizontal="@dimen/text_padding"/>

        <Button
            android:id="@+id/button_save_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider_6"
            android:text="@string/save_settings"
            android:backgroundTint="@color/colorAccent"
            android:layout_marginHorizontal="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/divider_spacing"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            />




    </RelativeLayout>
</ScrollView>