<resources>
    <string name="app_name">lyaho340-in-class</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="my_name">Larissa Yaholkovsky</string>
    <string name="date_created">18 Apr 2020</string>
    <string name="is_cat_with_hotdog">is cat with hotdog</string>
    <string name="go_to_form_button">FORM</string>

    <string name="form_instructions">Please enter the following information:</string>
    <string name="enter_name">Type your name</string>
    <string name="enter_email">Type your email address</string>
    <string name="enter_username">Type your username</string>
    <string name="enter_occupation">Type your occupation</string>
    <string name="enter_bio">Share something about yourself</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="select_date">SELECT DATE</string>
    <string name="submit">SUBMIT</string>

    <string name="thanks_signup">Thanks for Signing Up</string>
    <string name="generic_avatar">generic avatar for profile picture</string>

    <string name="error_field_required">required field</string>
    <string name="check_age">must be 18 years or older</string>
    <string name="check_email">must enter valid email address</string>

    // FORM VALIDATION STRINGS
    <string name="name_digits">abcdefghijklmnopqrstuvwxyz-\' ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="email_username_digits">"abcdefghijklmnopqrstuvwkyzABCDEFGHIJKLMNOPQRSTUVWXYZ@-_.1234567890"</string>
    <string name="name_display">displays user\'s name</string>
    <string name="age_display">displays user\'s age</string>
    <string name="bio_display">displays user\'s bio</string>
    <string name="username_display">displays user\'s username</string>
    <string name="occupation_display">displays user\'s occupation</string>
    <string name="scrollview_success">scrollview for the success activity</string>
    <string name="tab_name_settings">Settings</string>
    <string name="tab_name_matches">Matches</string>
    <string name="tab_name_profile">Profile</string>

    // MATCH NAMES
    <string name="match_1">Sansevieiria</string>
    <string name="match_2">Pilea</string>
    <string name="match_3">Senecio</string>
    <string name="match_4">Philodendron</string>
    <string name="match_5">Oxalis</string>
    <string name="match_6">Ludisia</string>
    <string name="match_7">Asplenium</string>
    <string name="match_8">Peperomia</string>
    <string name="match_9">Syngonium</string>
    <string name="match_10">Aglaonema</string>

    // MATCHES
    <string name="match_picture">profile picture of match</string>
    <string name="not_liked">not liked</string>
    <string name="liked">liked</string>
    <string name="match_name">name of match</string>

    <string name="web_client_id_from_google_services" >657839479368-eeufgm9jrgkie6mdvr2duie4esceff81.apps.googleusercontent.com</string>
    <string name="app_client_id_from_google_services" >657839479368-nttqssif9kua5en8gr0a324c0r8euddk.apps.googleusercontent.com</string>

    // SETTINGS
    <string name="match_reminder_time_label">Daily Match Reminder Time:</string>
    <string name="max_distance_label">Max Distance (in miles)</string>
    <string name="your_gender_label">Your Gender:</string>
    <string name="looking_for_gender_label">Looking for:</string>
    <string name="account_privacy_label">Account Privacy:</string>
    <string name="looking_for_ages_label">Looking for Ages:</string>
    <string name="to">to</string>
    <string name="save_settings">Save</string>
    <string name="max_distance_error">max distance cannot be less than 1</string>
    <string name="min_age_error">min age cannot be less than 18</string>
    <string name="max_age_error">max age cannot be less than min age</string>
    <string-array name="genders">
        <item>male</item>
        <item>female</item>
        <item>non-binary</item>
        <item>other</item>
    </string-array>
    <string-array name="account_privacy">
        <item>private</item>
        <item>public</item>
    </string-array>

    // LOCATION SERVICES
    <string name="enable_location">Enable Location</string>
    <string name="enable_location_message">please enable location to continue</string>
    <string name="location_settings">location settings</string>
    <string name="location_cancel">cancel</string>
</resources>
