...
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_big"
            android:padding="@dimen/match_name_padding"
            />

        <ImageButton
            android:id="@+id/like_button"
            android:layout_width="@dimen/like_button_width"
            android:layout_height="@dimen/like_button_width"
            android:layout_marginEnd="@dimen/like_button_margin"
            android:layout_marginBottom="@dimen/like_button_margin"
            android:layout_alignBottom="@id/match_picture"
            android:layout_alignEnd="@id/match_picture"
...
